# django-tailwind-boilerplate

./: pyproject.toml
core/: settings.py  urls.py
