[tool.poetry]
name = "django-tailwind-boilerplate"
version = "0.1.0"
description = ""
authors = ["MkDierz <msyibbran24@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-tailwind = "^3.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
